--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(print_labtests_flextable)
 export(print_message)
 export(print_signsandsyptoms_flextable)
 export(print_warning)
+export(read_EudraCT_vocabulary)
 export(read_report_YAML)
 export(record_data_query)
 export(refactor_variable)
@@ -136,6 +137,7 @@ importFrom(lubridate,years)
 importFrom(lubridate,ymd)
 importFrom(officer,fp_border)
 importFrom(purrr,discard)
+importFrom(readxl,read_excel)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rlang,as_label)
