Updating to reflect previous change from go() to do().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(convert_dates_to_EudraCT_age_categories)
 export(create_SSR_structure)
 export(create_dummy_dataset)
 export(create_testresult_string)
+export(do)
 export(do_count)
 export(do_count_comparison)
 export(do_list_comparison)
@@ -33,7 +34,6 @@ export(extract_simple_dependencies)
 export(find_mode)
 export(fit_flextable_to_page)
 export(get_random_dates)
-export(go)
 export(initialise_RECIST_VALUES)
 export(parse_MACRO_DSD_file)
 export(parse_MACRO_DSD_file_for_glossary_and_dependencies)
