--- a/inst/resources/_summary.yml
+++ b/inst/resources/_summary.yml
@@ -5,8 +5,8 @@ delete_merged_file: true
 rmd_files: [
   "index_supporting.Rmd",
   "31_report-title-page.Rmd",
-  "33_summary-preamble.Rmd",
-  "40_recruitment-and-accrual.Rmd",
-  "41_patient-safety.Rmd",
+  "41c_summary-preamble.Rmd",
+  "42_eligibility-population-membership.Rmd",
+  "45_patient-safety.Rmd",
   "90_file-information.Rmd",
   ]
